Added esp32 target which disables 64-bit atomics.
This change allows esp32 target to compile.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE.txt", "build.rs"]
 
 edition = "2018"
 
+[features]
+esp32 = []
+
 [dependencies]
 
 [dev-dependencies]
